--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -197,6 +197,7 @@ allow 173.237.206.68;
 allow 173.249.57.253;
 allow 173.255.198.243;
 allow 176.118.193.33;
+allow 176.121.81.51;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.97.114.202;
@@ -804,6 +805,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.137.99.6;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -843,6 +845,7 @@ allow 45.154.98.26;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
+allow 45.61.188.15;
 allow 45.66.35.10;
 allow 45.66.35.20;
 allow 45.66.35.21;
@@ -972,6 +975,7 @@ allow 82.221.139.190;
 allow 82.7.89.242;
 allow 83.217.9.73;
 allow 83.96.213.63;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.239.46.144;
 allow 84.247.165.51;
@@ -995,6 +999,7 @@ allow 89.147.110.154;
 allow 89.147.110.82;
 allow 89.147.111.87;
 allow 89.187.143.31;
+allow 89.208.113.3;
 allow 89.221.215.139;
 allow 89.221.217.206;
 allow 89.234.157.254;
@@ -1023,6 +1028,7 @@ allow 92.243.24.163;
 allow 92.246.138.145;
 allow 92.246.84.133;
 allow 92.33.155.77;
+allow 93.115.172.89;
 allow 93.123.12.112;
 allow 93.185.165.211;
 allow 93.95.228.125;
