Update lists at 20250120-1501

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -86,6 +86,7 @@ allow 108.181.69.243;
 allow 108.61.189.136;
 allow 109.120.157.137;
 allow 109.169.33.163;
+allow 109.199.101.106;
 allow 109.228.160.26;
 allow 109.69.67.17;
 allow 109.70.100.1;
@@ -104,7 +105,6 @@ allow 109.70.100.71;
 allow 114.35.245.150;
 allow 118.163.74.160;
 allow 121.127.37.151;
-allow 121.78.28.166;
 allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.127.180.156;
@@ -196,6 +196,7 @@ allow 173.0.3.111;
 allow 173.237.206.68;
 allow 173.249.57.253;
 allow 173.255.198.243;
+allow 173.44.141.34;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.58.100.98;
@@ -274,6 +275,7 @@ allow 185.129.62.63;
 allow 185.130.44.108;
 allow 185.130.44.43;
 allow 185.130.47.58;
+allow 185.132.53.12;
 allow 185.142.239.49;
 allow 185.146.232.234;
 allow 185.153.197.227;
@@ -850,7 +852,6 @@ allow 23.154.177.4;
 allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
-allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.8.104;
 allow 23.184.48.254;
@@ -1028,6 +1029,7 @@ allow 2a02:c204:2195:2012::1;
 allow 2a02:c204:2220:8710::1;
 allow 2a02:c206:2239:9861::1;
 allow 2a02:c206:2240:3516::1;
+allow 2a02:c206:2240:5051::1;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
@@ -1131,6 +1133,7 @@ allow 2a0a:3840:8078:28:0:504e:1c2e:1337;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:4140:6c6c::2;
 allow 2a0b:4142:7ca::2;
+allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1302,8 +1305,11 @@ allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
 allow 2a0d:bbc7:0:1::328;
 allow 2a0d:bbc7:0:1::36c;
+allow 2a0d:bbc7:0:1::38c;
 allow 2a0d:bbc7:0:1::394;
+allow 2a0d:bbc7:0:1::3bd;
 allow 2a0d:bbc7:0:1::3cc;
+allow 2a0d:bbc7:0:1::3d5;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
@@ -1482,9 +1488,12 @@ allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.84.107.101;
+allow 45.84.107.172;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.222;
+allow 45.84.107.33;
+allow 45.84.107.47;
 allow 45.84.107.55;
 allow 45.84.107.74;
 allow 45.84.107.76;
@@ -1519,7 +1528,6 @@ allow 5.196.95.34;
 allow 5.255.100.206;
 allow 5.255.100.219;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.102.89;
 allow 5.255.103.235;
 allow 5.255.104.202;
