--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -272,6 +272,7 @@ deny 2a02:c204:2195:2012::1;
 deny 2a02:c204:2220:8710::1;
 deny 2a02:c206:2239:9861::1;
 deny 2a02:c206:2240:3516::1;
+deny 2a02:c206:2240:5051::1;
 deny 2a02:c207:3002:8283::1;
 deny 2a02:ec0:209:10::4;
 deny 2a02:ed06::222;
@@ -375,6 +376,7 @@ deny 2a0a:3840:8078:28:0:504e:1c2e:1337;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:4140:6c6c::2;
 deny 2a0b:4142:7ca::2;
+deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
@@ -546,8 +548,11 @@ deny 2a0d:bbc7:0:1::254;
 deny 2a0d:bbc7:0:1::320;
 deny 2a0d:bbc7:0:1::328;
 deny 2a0d:bbc7:0:1::36c;
+deny 2a0d:bbc7:0:1::38c;
 deny 2a0d:bbc7:0:1::394;
+deny 2a0d:bbc7:0:1::3bd;
 deny 2a0d:bbc7:0:1::3cc;
+deny 2a0d:bbc7:0:1::3d5;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
 deny 2a0e:4005:1002:ffff:185:40:4:101;
