--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -86,6 +86,7 @@ deny 108.181.69.243;
 deny 108.61.189.136;
 deny 109.120.157.137;
 deny 109.169.33.163;
+deny 109.199.101.106;
 deny 109.228.160.26;
 deny 109.69.67.17;
 deny 109.70.100.1;
@@ -104,7 +105,6 @@ deny 109.70.100.71;
 deny 114.35.245.150;
 deny 118.163.74.160;
 deny 121.127.37.151;
-deny 121.78.28.166;
 deny 123.253.35.32;
 deny 125.212.241.131;
 deny 128.127.180.156;
@@ -196,6 +196,7 @@ deny 173.0.3.111;
 deny 173.237.206.68;
 deny 173.249.57.253;
 deny 173.255.198.243;
+deny 173.44.141.34;
 deny 176.118.193.33;
 deny 176.121.81.51;
 deny 176.58.100.98;
@@ -274,6 +275,7 @@ deny 185.129.62.63;
 deny 185.130.44.108;
 deny 185.130.44.43;
 deny 185.130.47.58;
+deny 185.132.53.12;
 deny 185.142.239.49;
 deny 185.146.232.234;
 deny 185.153.197.227;
@@ -850,7 +852,6 @@ deny 23.154.177.4;
 deny 23.154.177.5;
 deny 23.154.177.6;
 deny 23.154.177.7;
-deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.8.104;
 deny 23.184.48.254;
@@ -1028,6 +1029,7 @@ deny 2a02:c204:2195:2012::1;
 deny 2a02:c204:2220:8710::1;
 deny 2a02:c206:2239:9861::1;
 deny 2a02:c206:2240:3516::1;
+deny 2a02:c206:2240:5051::1;
 deny 2a02:c207:3002:8283::1;
 deny 2a02:ec0:209:10::4;
 deny 2a02:ed06::222;
@@ -1131,6 +1133,7 @@ deny 2a0a:3840:8078:28:0:504e:1c2e:1337;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:4140:6c6c::2;
 deny 2a0b:4142:7ca::2;
+deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
@@ -1302,8 +1305,11 @@ deny 2a0d:bbc7:0:1::254;
 deny 2a0d:bbc7:0:1::320;
 deny 2a0d:bbc7:0:1::328;
 deny 2a0d:bbc7:0:1::36c;
+deny 2a0d:bbc7:0:1::38c;
 deny 2a0d:bbc7:0:1::394;
+deny 2a0d:bbc7:0:1::3bd;
 deny 2a0d:bbc7:0:1::3cc;
+deny 2a0d:bbc7:0:1::3d5;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
 deny 2a0e:4005:1002:ffff:185:40:4:101;
@@ -1482,9 +1488,12 @@ deny 45.80.158.69;
 deny 45.8.22.207;
 deny 45.83.104.137;
 deny 45.84.107.101;
+deny 45.84.107.172;
 deny 45.84.107.182;
 deny 45.84.107.198;
 deny 45.84.107.222;
+deny 45.84.107.33;
+deny 45.84.107.47;
 deny 45.84.107.55;
 deny 45.84.107.74;
 deny 45.84.107.76;
@@ -1519,7 +1528,6 @@ deny 5.196.95.34;
 deny 5.255.100.206;
 deny 5.255.100.219;
 deny 5.255.100.227;
-deny 5.255.100.26;
 deny 5.255.102.89;
 deny 5.255.103.235;
 deny 5.255.104.202;
