Update lists at 20250120-1800

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -105,6 +105,7 @@ deny 109.70.100.71;
 deny 114.35.245.150;
 deny 118.163.74.160;
 deny 121.127.37.151;
+deny 121.78.28.166;
 deny 123.253.35.32;
 deny 125.212.241.131;
 deny 128.127.180.156;
@@ -210,6 +211,7 @@ deny 178.17.170.23;
 deny 178.17.171.102;
 deny 178.17.174.14;
 deny 178.17.174.164;
+deny 178.175.134.93;
 deny 178.175.148.209;
 deny 178.175.148.246;
 deny 178.20.55.16;
@@ -287,7 +289,6 @@ deny 185.170.114.25;
 deny 185.183.157.214;
 deny 185.183.159.40;
 deny 185.191.204.254;
-deny 185.193.158.134;
 deny 185.193.52.180;
 deny 185.195.236.55;
 deny 185.195.71.244;
@@ -441,8 +442,29 @@ deny 185.220.101.60;
 deny 185.220.101.61;
 deny 185.220.101.62;
 deny 185.220.101.63;
+deny 185.220.101.64;
+deny 185.220.101.65;
+deny 185.220.101.66;
+deny 185.220.101.67;
+deny 185.220.101.68;
+deny 185.220.101.69;
 deny 185.220.101.7;
+deny 185.220.101.70;
+deny 185.220.101.71;
+deny 185.220.101.72;
+deny 185.220.101.73;
+deny 185.220.101.74;
+deny 185.220.101.75;
+deny 185.220.101.76;
+deny 185.220.101.77;
+deny 185.220.101.78;
+deny 185.220.101.79;
 deny 185.220.101.8;
+deny 185.220.101.80;
+deny 185.220.101.81;
+deny 185.220.101.82;
+deny 185.220.101.83;
+deny 185.220.101.84;
 deny 185.220.101.9;
 deny 185.220.101.96;
 deny 185.220.101.97;
@@ -826,7 +848,6 @@ deny 23.153.248.33;
 deny 23.153.248.34;
 deny 23.154.177.10;
 deny 23.154.177.11;
-deny 23.154.177.12;
 deny 23.154.177.13;
 deny 23.154.177.14;
 deny 23.154.177.15;
@@ -852,6 +873,7 @@ deny 23.154.177.4;
 deny 23.154.177.5;
 deny 23.154.177.6;
 deny 23.154.177.7;
+deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.8.104;
 deny 23.184.48.254;
@@ -999,6 +1021,7 @@ deny 2800:ba0:6:c1::4858;
 deny 2a00:16b0:1:243::7012:3117;
 deny 2a00:16b0:1:243::7012:a500;
 deny 2a00:16b0:1:243::7012:e817;
+deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
@@ -1265,6 +1288,27 @@ deny 2a0b:f4c2::29;
 deny 2a0b:f4c2::3;
 deny 2a0b:f4c2::30;
 deny 2a0b:f4c2::31;
+deny 2a0b:f4c2:3::64;
+deny 2a0b:f4c2:3::65;
+deny 2a0b:f4c2:3::66;
+deny 2a0b:f4c2:3::67;
+deny 2a0b:f4c2:3::68;
+deny 2a0b:f4c2:3::69;
+deny 2a0b:f4c2:3::70;
+deny 2a0b:f4c2:3::71;
+deny 2a0b:f4c2:3::72;
+deny 2a0b:f4c2:3::73;
+deny 2a0b:f4c2:3::74;
+deny 2a0b:f4c2:3::75;
+deny 2a0b:f4c2:3::76;
+deny 2a0b:f4c2:3::77;
+deny 2a0b:f4c2:3::78;
+deny 2a0b:f4c2:3::79;
+deny 2a0b:f4c2:3::80;
+deny 2a0b:f4c2:3::81;
+deny 2a0b:f4c2:3::82;
+deny 2a0b:f4c2:3::83;
+deny 2a0b:f4c2:3::84;
 deny 2a0b:f4c2::4;
 deny 2a0b:f4c2:4::100;
 deny 2a0b:f4c2:4::101;
@@ -1329,7 +1373,6 @@ deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:5::2;
 deny 2a0e:e701:1198::1;
 deny 2a0f:85c1:356:3238::1;
-deny 2a0f:93c1:26:1f2::9ce5;
 deny 2a0f:9400:7e11:8e09::1;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
@@ -1487,6 +1530,7 @@ deny 45.80.158.27;
 deny 45.80.158.69;
 deny 45.8.22.207;
 deny 45.83.104.137;
+deny 45.83.21.193;
 deny 45.84.107.101;
 deny 45.84.107.172;
 deny 45.84.107.182;
@@ -1616,6 +1660,7 @@ deny 87.118.116.12;
 deny 87.118.116.90;
 deny 87.118.122.30;
 deny 87.118.122.51;
+deny 87.120.254.132;
 deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
