--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -242,6 +242,7 @@ allow 2800:ba0:6:c1::4858;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
+allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -508,6 +509,27 @@ allow 2a0b:f4c2::29;
 allow 2a0b:f4c2::3;
 allow 2a0b:f4c2::30;
 allow 2a0b:f4c2::31;
+allow 2a0b:f4c2:3::64;
+allow 2a0b:f4c2:3::65;
+allow 2a0b:f4c2:3::66;
+allow 2a0b:f4c2:3::67;
+allow 2a0b:f4c2:3::68;
+allow 2a0b:f4c2:3::69;
+allow 2a0b:f4c2:3::70;
+allow 2a0b:f4c2:3::71;
+allow 2a0b:f4c2:3::72;
+allow 2a0b:f4c2:3::73;
+allow 2a0b:f4c2:3::74;
+allow 2a0b:f4c2:3::75;
+allow 2a0b:f4c2:3::76;
+allow 2a0b:f4c2:3::77;
+allow 2a0b:f4c2:3::78;
+allow 2a0b:f4c2:3::79;
+allow 2a0b:f4c2:3::80;
+allow 2a0b:f4c2:3::81;
+allow 2a0b:f4c2:3::82;
+allow 2a0b:f4c2:3::83;
+allow 2a0b:f4c2:3::84;
 allow 2a0b:f4c2::4;
 allow 2a0b:f4c2:4::100;
 allow 2a0b:f4c2:4::101;
@@ -572,7 +594,6 @@ allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:e701:1198::1;
 allow 2a0f:85c1:356:3238::1;
-allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:9400:7e11:8e09::1;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
