--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -242,6 +242,7 @@ deny 2800:ba0:6:c1::4858;
 deny 2a00:16b0:1:243::7012:3117;
 deny 2a00:16b0:1:243::7012:a500;
 deny 2a00:16b0:1:243::7012:e817;
+deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
@@ -508,6 +509,27 @@ deny 2a0b:f4c2::29;
 deny 2a0b:f4c2::3;
 deny 2a0b:f4c2::30;
 deny 2a0b:f4c2::31;
+deny 2a0b:f4c2:3::64;
+deny 2a0b:f4c2:3::65;
+deny 2a0b:f4c2:3::66;
+deny 2a0b:f4c2:3::67;
+deny 2a0b:f4c2:3::68;
+deny 2a0b:f4c2:3::69;
+deny 2a0b:f4c2:3::70;
+deny 2a0b:f4c2:3::71;
+deny 2a0b:f4c2:3::72;
+deny 2a0b:f4c2:3::73;
+deny 2a0b:f4c2:3::74;
+deny 2a0b:f4c2:3::75;
+deny 2a0b:f4c2:3::76;
+deny 2a0b:f4c2:3::77;
+deny 2a0b:f4c2:3::78;
+deny 2a0b:f4c2:3::79;
+deny 2a0b:f4c2:3::80;
+deny 2a0b:f4c2:3::81;
+deny 2a0b:f4c2:3::82;
+deny 2a0b:f4c2:3::83;
+deny 2a0b:f4c2:3::84;
 deny 2a0b:f4c2::4;
 deny 2a0b:f4c2:4::100;
 deny 2a0b:f4c2:4::101;
@@ -572,7 +594,6 @@ deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:5::2;
 deny 2a0e:e701:1198::1;
 deny 2a0f:85c1:356:3238::1;
-deny 2a0f:93c1:26:1f2::9ce5;
 deny 2a0f:9400:7e11:8e09::1;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
