--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -105,6 +105,7 @@ set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.35.245.150;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 121.127.37.151;
+set_real_ip_from 121.78.28.166;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.127.180.156;
@@ -210,6 +211,7 @@ set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
 set_real_ip_from 178.17.174.14;
 set_real_ip_from 178.17.174.164;
+set_real_ip_from 178.175.134.93;
 set_real_ip_from 178.175.148.209;
 set_real_ip_from 178.175.148.246;
 set_real_ip_from 178.20.55.16;
@@ -287,7 +289,6 @@ set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.183.157.214;
 set_real_ip_from 185.183.159.40;
 set_real_ip_from 185.191.204.254;
-set_real_ip_from 185.193.158.134;
 set_real_ip_from 185.193.52.180;
 set_real_ip_from 185.195.236.55;
 set_real_ip_from 185.195.71.244;
@@ -441,8 +442,29 @@ set_real_ip_from 185.220.101.60;
 set_real_ip_from 185.220.101.61;
 set_real_ip_from 185.220.101.62;
 set_real_ip_from 185.220.101.63;
+set_real_ip_from 185.220.101.64;
+set_real_ip_from 185.220.101.65;
+set_real_ip_from 185.220.101.66;
+set_real_ip_from 185.220.101.67;
+set_real_ip_from 185.220.101.68;
+set_real_ip_from 185.220.101.69;
 set_real_ip_from 185.220.101.7;
+set_real_ip_from 185.220.101.70;
+set_real_ip_from 185.220.101.71;
+set_real_ip_from 185.220.101.72;
+set_real_ip_from 185.220.101.73;
+set_real_ip_from 185.220.101.74;
+set_real_ip_from 185.220.101.75;
+set_real_ip_from 185.220.101.76;
+set_real_ip_from 185.220.101.77;
+set_real_ip_from 185.220.101.78;
+set_real_ip_from 185.220.101.79;
 set_real_ip_from 185.220.101.8;
+set_real_ip_from 185.220.101.80;
+set_real_ip_from 185.220.101.81;
+set_real_ip_from 185.220.101.82;
+set_real_ip_from 185.220.101.83;
+set_real_ip_from 185.220.101.84;
 set_real_ip_from 185.220.101.9;
 set_real_ip_from 185.220.101.96;
 set_real_ip_from 185.220.101.97;
@@ -826,7 +848,6 @@ set_real_ip_from 23.153.248.33;
 set_real_ip_from 23.153.248.34;
 set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
-set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
 set_real_ip_from 23.154.177.14;
 set_real_ip_from 23.154.177.15;
@@ -852,6 +873,7 @@ set_real_ip_from 23.154.177.4;
 set_real_ip_from 23.154.177.5;
 set_real_ip_from 23.154.177.6;
 set_real_ip_from 23.154.177.7;
+set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.254;
@@ -999,6 +1021,7 @@ set_real_ip_from 2800:ba0:6:c1::4858;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
 set_real_ip_from 2a00:16b0:1:243::7012:a500;
 set_real_ip_from 2a00:16b0:1:243::7012:e817;
+set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
 set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:12c::4d3a;
@@ -1265,6 +1288,27 @@ set_real_ip_from 2a0b:f4c2::29;
 set_real_ip_from 2a0b:f4c2::3;
 set_real_ip_from 2a0b:f4c2::30;
 set_real_ip_from 2a0b:f4c2::31;
+set_real_ip_from 2a0b:f4c2:3::64;
+set_real_ip_from 2a0b:f4c2:3::65;
+set_real_ip_from 2a0b:f4c2:3::66;
+set_real_ip_from 2a0b:f4c2:3::67;
+set_real_ip_from 2a0b:f4c2:3::68;
+set_real_ip_from 2a0b:f4c2:3::69;
+set_real_ip_from 2a0b:f4c2:3::70;
+set_real_ip_from 2a0b:f4c2:3::71;
+set_real_ip_from 2a0b:f4c2:3::72;
+set_real_ip_from 2a0b:f4c2:3::73;
+set_real_ip_from 2a0b:f4c2:3::74;
+set_real_ip_from 2a0b:f4c2:3::75;
+set_real_ip_from 2a0b:f4c2:3::76;
+set_real_ip_from 2a0b:f4c2:3::77;
+set_real_ip_from 2a0b:f4c2:3::78;
+set_real_ip_from 2a0b:f4c2:3::79;
+set_real_ip_from 2a0b:f4c2:3::80;
+set_real_ip_from 2a0b:f4c2:3::81;
+set_real_ip_from 2a0b:f4c2:3::82;
+set_real_ip_from 2a0b:f4c2:3::83;
+set_real_ip_from 2a0b:f4c2:3::84;
 set_real_ip_from 2a0b:f4c2::4;
 set_real_ip_from 2a0b:f4c2:4::100;
 set_real_ip_from 2a0b:f4c2:4::101;
@@ -1329,7 +1373,6 @@ set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:5::2;
 set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
-set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
 set_real_ip_from 2a0f:9400:7e11:8e09::1;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
@@ -1487,6 +1530,7 @@ set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.80.158.69;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
+set_real_ip_from 45.83.21.193;
 set_real_ip_from 45.84.107.101;
 set_real_ip_from 45.84.107.172;
 set_real_ip_from 45.84.107.182;
@@ -1616,6 +1660,7 @@ set_real_ip_from 87.118.116.12;
 set_real_ip_from 87.118.116.90;
 set_real_ip_from 87.118.122.30;
 set_real_ip_from 87.118.122.51;
+set_real_ip_from 87.120.254.132;
 set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
