--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -151,7 +151,6 @@ allow 154.213.187.66;
 allow 154.213.187.98;
 allow 154.213.192.19;
 allow 154.26.159.157;
-allow 157.20.52.195;
 allow 160.119.249.240;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -173,7 +172,6 @@ allow 163.172.45.102;
 allow 164.132.172.209;
 allow 165.73.242.163;
 allow 166.70.207.2;
-allow 166.88.225.32;
 allow 171.25.193.20;
 allow 171.25.193.234;
 allow 171.25.193.235;
@@ -848,6 +846,7 @@ allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
+allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
@@ -878,7 +877,6 @@ allow 23.154.177.9;
 allow 23.155.8.104;
 allow 23.184.48.254;
 allow 23.184.48.78;
-allow 23.236.122.151;
 allow 23.236.122.193;
 allow 23.94.211.25;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
@@ -1039,7 +1037,6 @@ allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
-allow 2a01:e5c0:2829::2;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
@@ -1066,6 +1063,7 @@ allow 2a03:4000:1e:81:c835:7dff:fe90:3ed5;
 allow 2a03:4000:21:8a8:dead:beef:ca1f:1337;
 allow 2a03:4000:27:36:c813:6dff:fe0e:b93e;
 allow 2a03:4000:27:6f8:e466:27ff:fe82:1b2a;
+allow 2a03:4000:28:1e8::69;
 allow 2a03:4000:29:8a9:887f:9eff:feed:9e9;
 allow 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
@@ -1469,14 +1467,12 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 3.76.125.118;
 allow 38.97.116.244;
-allow 42.119.60.176;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
-allow 45.137.99.6;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1530,7 +1526,6 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.172;
 allow 45.84.107.182;
@@ -1609,7 +1604,6 @@ allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
-allow 58.69.38.96;
 allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.84.146;
@@ -1672,7 +1666,6 @@ allow 89.147.110.154;
 allow 89.147.110.82;
 allow 89.147.111.87;
 allow 89.187.143.31;
-allow 89.208.113.3;
 allow 89.221.215.139;
 allow 89.221.217.206;
 allow 89.234.157.254;
@@ -1701,7 +1694,6 @@ allow 92.243.24.163;
 allow 92.246.138.145;
 allow 92.246.84.133;
 allow 92.33.155.77;
-allow 93.115.172.89;
 allow 93.123.12.112;
 allow 93.185.165.211;
 allow 93.95.228.125;
@@ -1717,6 +1709,7 @@ allow 94.102.51.15;
 allow 94.142.241.194;
 allow 94.142.244.16;
 allow 94.159.104.166;
+allow 94.16.115.121;
 allow 94.16.116.81;
 allow 94.16.121.91;
 allow 94.177.106.236;
