--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -103,6 +103,7 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.35.245.150;
+allow 118.163.74.160;
 allow 121.127.37.151;
 allow 121.78.28.166;
 allow 123.253.35.32;
@@ -782,6 +783,7 @@ allow 2001:910:1400:107::2;
 allow 2001:9b0:258:c600::1000;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:9e54::b;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
