--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -500,6 +500,7 @@ allow 185.246.188.73;
 allow 185.246.188.74;
 allow 185.246.189.99;
 allow 185.246.84.179;
+allow 185.247.184.105;
 allow 185.247.184.33;
 allow 185.252.232.218;
 allow 185.254.196.141;
@@ -1110,6 +1111,7 @@ allow 2a04:52c0:130:896e::1;
 allow 2a04:9b87:500::3;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
+allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
