--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -332,6 +332,7 @@ allow 2a04:52c0:130:896e::1;
 allow 2a04:9b87:500::3;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
+allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
