--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -105,7 +105,6 @@ allow 109.70.100.71;
 allow 114.35.245.150;
 allow 118.163.74.160;
 allow 121.127.37.151;
-allow 121.78.28.106;
 allow 121.78.28.166;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -284,6 +283,7 @@ allow 185.154.110.17;
 allow 185.165.169.239;
 allow 185.165.171.84;
 allow 185.170.114.25;
+allow 185.177.151.34;
 allow 185.183.157.214;
 allow 185.183.159.40;
 allow 185.191.204.254;
@@ -609,6 +609,7 @@ allow 193.189.100.203;
 allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
+allow 193.200.16.21;
 allow 193.218.118.133;
 allow 193.218.118.137;
 allow 193.218.118.173;
@@ -836,14 +837,11 @@ allow 23.129.64.171;
 allow 23.129.64.172;
 allow 23.129.64.173;
 allow 23.137.248.100;
-allow 23.137.248.192;
 allow 23.137.250.83;
 allow 23.137.253.108;
 allow 23.137.253.109;
 allow 23.137.253.110;
-allow 23.137.253.254;
 allow 23.137.253.27;
-allow 23.137.254.137;
 allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
@@ -877,7 +875,6 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.8.104;
-allow 23.184.48.254;
 allow 23.184.48.78;
 allow 23.236.122.193;
 allow 23.94.211.25;
@@ -907,16 +904,12 @@ allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
-allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
-allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:f38f::1;
-allow 2602:fc24:18:f84a::1;
 allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
-allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
@@ -1155,7 +1148,6 @@ allow 2a09:b280:fe01:61::a;
 allow 2a0a:3840:8078:28:0:504e:1c2e:1337;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:4140:6c6c::2;
-allow 2a0b:4142:7ca::2;
 allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
@@ -1397,6 +1389,7 @@ allow 2a0f:e586:f:f:f10e:eca5:5d0e:135b;
 allow 2a0f:e586:f:f:fca1:db52:9055:cff3;
 allow 2a10:1fc0:11:0:216:3cff:fe3b:b013;
 allow 2a10:1fc0:1::c758:3168;
+allow 2a10:1fc0:8::f626:c9c6;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1542,6 +1535,7 @@ allow 45.84.107.55;
 allow 45.84.107.74;
 allow 45.84.107.76;
 allow 45.94.31.68;
+allow 45.95.169.100;
 allow 45.95.169.130;
 allow 45.95.169.223;
 allow 45.95.169.224;
@@ -1608,6 +1602,7 @@ allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
+allow 5.61.51.143;
 allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.84.146;
@@ -1713,7 +1708,6 @@ allow 93.99.104.40;
 allow 94.102.51.15;
 allow 94.142.241.194;
 allow 94.142.244.16;
-allow 94.159.104.166;
 allow 94.16.115.121;
 allow 94.16.116.81;
 allow 94.16.121.91;
