--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -105,7 +105,6 @@ deny 109.70.100.71;
 deny 114.35.245.150;
 deny 118.163.74.160;
 deny 121.127.37.151;
-deny 121.78.28.106;
 deny 121.78.28.166;
 deny 123.253.35.32;
 deny 125.212.241.131;
@@ -284,6 +283,7 @@ deny 185.154.110.17;
 deny 185.165.169.239;
 deny 185.165.171.84;
 deny 185.170.114.25;
+deny 185.177.151.34;
 deny 185.183.157.214;
 deny 185.183.159.40;
 deny 185.191.204.254;
@@ -609,6 +609,7 @@ deny 193.189.100.203;
 deny 193.189.100.204;
 deny 193.189.100.205;
 deny 193.189.100.206;
+deny 193.200.16.21;
 deny 193.218.118.133;
 deny 193.218.118.137;
 deny 193.218.118.173;
@@ -836,14 +837,11 @@ deny 23.129.64.171;
 deny 23.129.64.172;
 deny 23.129.64.173;
 deny 23.137.248.100;
-deny 23.137.248.192;
 deny 23.137.250.83;
 deny 23.137.253.108;
 deny 23.137.253.109;
 deny 23.137.253.110;
-deny 23.137.253.254;
 deny 23.137.253.27;
-deny 23.137.254.137;
 deny 23.153.248.33;
 deny 23.153.248.34;
 deny 23.154.177.10;
@@ -877,7 +875,6 @@ deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.8.104;
-deny 23.184.48.254;
 deny 23.184.48.78;
 deny 23.236.122.193;
 deny 23.94.211.25;
@@ -907,16 +904,12 @@ deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
-deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
-deny 2602:fc24:12:9fef::1;
 deny 2602:fc24:12:a679::1;
 deny 2602:fc24:18:f38f::1;
-deny 2602:fc24:18:f84a::1;
 deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:2b4::1;
 deny 2602:fc24:19:30::1;
-deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:310:1::b;
 deny 2602:fccf:310:1::c;
@@ -1155,7 +1148,6 @@ deny 2a09:b280:fe01:61::a;
 deny 2a0a:3840:8078:28:0:504e:1c2e:1337;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:4140:6c6c::2;
-deny 2a0b:4142:7ca::2;
 deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
@@ -1397,6 +1389,7 @@ deny 2a0f:e586:f:f:f10e:eca5:5d0e:135b;
 deny 2a0f:e586:f:f:fca1:db52:9055:cff3;
 deny 2a10:1fc0:11:0:216:3cff:fe3b:b013;
 deny 2a10:1fc0:1::c758:3168;
+deny 2a10:1fc0:8::f626:c9c6;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1542,6 +1535,7 @@ deny 45.84.107.55;
 deny 45.84.107.74;
 deny 45.84.107.76;
 deny 45.94.31.68;
+deny 45.95.169.100;
 deny 45.95.169.130;
 deny 45.95.169.223;
 deny 45.95.169.224;
@@ -1608,6 +1602,7 @@ deny 54.36.209.254;
 deny 5.45.102.93;
 deny 5.45.104.176;
 deny 5.45.98.162;
+deny 5.61.51.143;
 deny 62.133.45.2;
 deny 62.171.137.169;
 deny 62.182.84.146;
@@ -1713,7 +1708,6 @@ deny 93.99.104.40;
 deny 94.102.51.15;
 deny 94.142.241.194;
 deny 94.142.244.16;
-deny 94.159.104.166;
 deny 94.16.115.121;
 deny 94.16.116.81;
 deny 94.16.121.91;
