--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -222,6 +222,8 @@ set_real_ip_from 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 set_real_ip_from 2605:6400:40:fe09::2;
 set_real_ip_from 2605:6400:d814:1b8::4;
 set_real_ip_from 2605:a140:2236:4415::1;
+set_real_ip_from 2605:a140:2241:3436::1;
+set_real_ip_from 2605:a142:2241:3426::1;
 set_real_ip_from 2605:aa80:0:9::3;
 set_real_ip_from 2607:5300:205:200::3dde;
 set_real_ip_from 2607:5300:205:200::4894;
@@ -266,6 +268,7 @@ set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c204:2195:2012::1;
 set_real_ip_from 2a02:c204:2220:8710::1;
+set_real_ip_from 2a02:c204:2241:3435::1;
 set_real_ip_from 2a02:c206:2239:9861::1;
 set_real_ip_from 2a02:c206:2240:3516::1;
 set_real_ip_from 2a02:c206:2240:5051::1;
