Update lists at 20250123-1200

--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -197,7 +197,6 @@ set_real_ip_from 2605:6400:30:f330:61ea:72a8:8aea:fa1f;
 set_real_ip_from 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 set_real_ip_from 2605:6400:30:f414:42ce:c612:dab8:1337;
 set_real_ip_from 2605:6400:30:f440:757e:adf1:55f7:5a31;
-set_real_ip_from 2605:6400:30:f44f:1::;
 set_real_ip_from 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
 set_real_ip_from 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
 set_real_ip_from 2605:6400:30:f503::1;
@@ -559,6 +558,7 @@ set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
+set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:8140:1fff:4a9a::1;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
