--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -65,7 +65,6 @@ allow 107.189.4.209;
 allow 107.189.5.121;
 allow 107.189.5.7;
 allow 107.189.6.124;
-allow 107.189.6.36;
 allow 107.189.7.141;
 allow 107.189.7.144;
 allow 107.189.7.168;
@@ -492,6 +491,7 @@ allow 185.246.128.161;
 allow 185.246.188.149;
 allow 185.246.188.73;
 allow 185.246.188.74;
+allow 185.246.189.140;
 allow 185.246.189.99;
 allow 185.246.84.179;
 allow 185.247.184.105;
@@ -621,6 +621,7 @@ allow 193.32.162.96;
 allow 193.36.132.21;
 allow 193.36.38.126;
 allow 193.70.80.213;
+allow 194.147.35.199;
 allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
@@ -839,6 +840,7 @@ allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
+allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
@@ -966,7 +968,6 @@ allow 2605:6400:30:f330:61ea:72a8:8aea:fa1f;
 allow 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 allow 2605:6400:30:f414:42ce:c612:dab8:1337;
 allow 2605:6400:30:f440:757e:adf1:55f7:5a31;
-allow 2605:6400:30:f44f:1::;
 allow 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
 allow 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
 allow 2605:6400:30:f503::1;
@@ -1329,6 +1330,7 @@ allow 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
 allow 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
 allow 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
+allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::1df;
@@ -1643,6 +1645,7 @@ allow 84.16.224.227;
 allow 84.239.46.144;
 allow 84.247.165.51;
 allow 84.247.183.128;
+allow 85.239.41.130;
 allow 85.93.218.204;
 allow 87.118.110.27;
 allow 87.118.116.103;
