Update lists at 20250123-1800

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -9,6 +9,7 @@ allow 103.196.37.111;
 allow 103.208.86.5;
 allow 103.251.167.10;
 allow 103.251.167.20;
+allow 103.28.52.93;
 allow 104.167.242.117;
 allow 104.167.242.118;
 allow 104.192.3.74;
@@ -122,6 +123,7 @@ allow 144.172.118.161;
 allow 144.172.118.4;
 allow 144.172.118.55;
 allow 144.172.118.73;
+allow 146.103.33.218;
 allow 146.19.143.47;
 allow 146.59.126.232;
 allow 146.59.231.4;
@@ -136,12 +138,6 @@ allow 15.204.238.148;
 allow 152.53.133.14;
 allow 152.53.53.243;
 allow 154.16.116.61;
-allow 154.213.185.133;
-allow 154.213.185.165;
-allow 154.213.185.183;
-allow 154.213.185.185;
-allow 154.213.185.230;
-allow 154.213.185.254;
 allow 154.213.187.36;
 allow 154.213.187.66;
 allow 154.213.187.98;
@@ -783,6 +779,7 @@ allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:9e54::b;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
+allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 202.182.99.129;
 allow 202.61.226.98;
@@ -868,7 +865,6 @@ allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
-allow 23.154.177.9;
 allow 23.155.8.104;
 allow 23.184.48.254;
 allow 23.184.48.78;
@@ -1107,12 +1103,8 @@ allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:122:49::1;
-allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:6589::1;
-allow 2a05:b0c7:67c6::1;
-allow 2a05:b0c7:6949::1;
-allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
 allow 2a05:d014:1527:3400:10e:d620:3542:1bc9;
 allow 2a05:d014:1527:3400:fffe:9986:ac97:faeb;
@@ -1690,6 +1682,7 @@ allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.223.2.52;
 allow 92.243.24.163;
+allow 92.246.130.65;
 allow 92.246.138.145;
 allow 92.246.84.133;
 allow 93.123.12.112;
