Update lists at 20250124-1200

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -89,7 +89,6 @@ allow 109.120.157.137;
 allow 109.169.33.163;
 allow 109.199.101.106;
 allow 109.199.101.134;
-allow 109.199.105.142;
 allow 109.228.160.26;
 allow 109.69.67.17;
 allow 109.70.100.1;
@@ -146,6 +145,7 @@ allow 154.213.187.66;
 allow 154.213.187.98;
 allow 154.213.192.19;
 allow 154.26.159.157;
+allow 158.220.123.219;
 allow 160.119.249.240;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -280,7 +280,6 @@ allow 185.183.157.214;
 allow 185.183.159.40;
 allow 185.191.204.254;
 allow 185.193.52.180;
-allow 185.195.236.55;
 allow 185.195.71.244;
 allow 185.207.107.130;
 allow 185.207.107.216;
@@ -509,7 +508,6 @@ allow 185.40.4.20;
 allow 185.40.4.22;
 allow 185.40.4.29;
 allow 185.40.4.38;
-allow 185.40.4.44;
 allow 185.40.4.64;
 allow 185.40.4.92;
 allow 185.40.4.94;
@@ -623,6 +621,7 @@ allow 193.70.80.213;
 allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
+allow 194.163.130.99;
 allow 194.163.157.49;
 allow 194.233.174.56;
 allow 194.26.192.142;
@@ -840,6 +839,7 @@ allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
+allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
@@ -1031,6 +1031,7 @@ allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
@@ -1043,7 +1044,8 @@ allow 2a02:c206:2239:9861::1;
 allow 2a02:c206:2240:3516::1;
 allow 2a02:c206:2240:5051::1;
 allow 2a02:c206:2240:5054::1;
-allow 2a02:c206:2240:5264::1;
+allow 2a02:c206:2240:8448::1;
+allow 2a02:c206:2241:2588::1;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
@@ -1139,7 +1141,6 @@ allow 2a09:61c0::20;
 allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
-allow 2a09:b280:fe01:61::a;
 allow 2a0a:3840:8078:28:0:504e:1c2e:1337;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:4140:6c6c::2;
@@ -1351,7 +1352,6 @@ allow 2a0e:4005:1002:ffff:185:40:4:20;
 allow 2a0e:4005:1002:ffff:185:40:4:22;
 allow 2a0e:4005:1002:ffff:185:40:4:29;
 allow 2a0e:4005:1002:ffff:185:40:4:38;
-allow 2a0e:4005:1002:ffff:185:40:4:44;
 allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
 allow 2a0e:4005:1002:ffff:185:40:4:94;
@@ -1519,7 +1519,6 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.172;
 allow 45.84.107.182;
@@ -1542,6 +1541,7 @@ allow 45.95.169.228;
 allow 45.95.169.229;
 allow 45.95.169.255;
 allow 46.165.243.36;
+allow 46.182.21.248;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 47.243.99.161;
