--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -260,6 +260,7 @@ deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
+deny 2a02:2970:1001::4b;
 deny 2a02:2b88:2:48b::1;
 deny 2a02:2b88:2:6ce::1;
 deny 2a02:418:6017::147;
@@ -272,7 +273,8 @@ deny 2a02:c206:2239:9861::1;
 deny 2a02:c206:2240:3516::1;
 deny 2a02:c206:2240:5051::1;
 deny 2a02:c206:2240:5054::1;
-deny 2a02:c206:2240:5264::1;
+deny 2a02:c206:2240:8448::1;
+deny 2a02:c206:2241:2588::1;
 deny 2a02:c207:3002:8283::1;
 deny 2a02:ec0:209:10::4;
 deny 2a02:ed06::222;
@@ -368,7 +370,6 @@ deny 2a09:61c0::20;
 deny 2a09:61c0::21;
 deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
-deny 2a09:b280:fe01:61::a;
 deny 2a0a:3840:8078:28:0:504e:1c2e:1337;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:4140:6c6c::2;
@@ -580,7 +581,6 @@ deny 2a0e:4005:1002:ffff:185:40:4:20;
 deny 2a0e:4005:1002:ffff:185:40:4:22;
 deny 2a0e:4005:1002:ffff:185:40:4:29;
 deny 2a0e:4005:1002:ffff:185:40:4:38;
-deny 2a0e:4005:1002:ffff:185:40:4:44;
 deny 2a0e:4005:1002:ffff:185:40:4:64;
 deny 2a0e:4005:1002:ffff:185:40:4:92;
 deny 2a0e:4005:1002:ffff:185:40:4:94;
