--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -843,6 +843,7 @@ allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
+allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
 allow 23.154.177.18;
@@ -1031,6 +1032,7 @@ allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
@@ -1442,7 +1444,6 @@ allow 2a13:d207:0:461::1;
 allow 2a14:7c2:10ec::1;
 allow 31.129.22.65;
 allow 31.133.0.210;
-allow 31.172.78.158;
 allow 31.220.75.237;
 allow 3.14.249.60;
 allow 35.0.127.52;
@@ -1542,6 +1543,7 @@ allow 45.95.169.228;
 allow 45.95.169.229;
 allow 45.95.169.255;
 allow 46.165.243.36;
+allow 46.182.21.248;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 47.243.99.161;
@@ -1631,7 +1633,6 @@ allow 8.218.9.41;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
-allow 82.221.139.190;
 allow 82.7.89.242;
 allow 83.96.213.63;
 allow 83.97.20.77;
