Update lists at 20250126-1200

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -332,14 +332,15 @@ deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:129:2098::1;
 deny 2a04:52c0:130:896e::1;
-deny 2a04:9b87:500::3;
 deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
 deny 2a05:541:122:49::1;
+deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
 deny 2a05:b0c7:6589::1;
+deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6cc4::1;
 deny 2a05:d014:1527:3400:10e:d620:3542:1bc9;
 deny 2a05:d014:1527:3400:fffe:9986:ac97:faeb;
@@ -586,10 +587,10 @@ deny 2a0e:4005:1002:ffff:185:40:4:44;
 deny 2a0e:4005:1002:ffff:185:40:4:64;
 deny 2a0e:4005:1002:ffff:185:40:4:92;
 deny 2a0e:4005:1002:ffff:185:40:4:94;
-deny 2a0e:4005:1002:ffff:185:40:4:95;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:5::2;
 deny 2a0e:e701:1198::1;
+deny 2a0f:7803:fac2:ab6d::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:9400:7e11:8e09::1;
 deny 2a0f:df00:0:255::194;
