--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -140,11 +140,14 @@ allow 15.204.238.148;
 allow 152.53.133.14;
 allow 152.53.53.243;
 allow 154.16.116.61;
+allow 154.213.185.133;
+allow 154.213.185.165;
 allow 154.213.187.36;
 allow 154.213.187.66;
 allow 154.213.187.98;
 allow 154.213.192.19;
 allow 154.26.159.157;
+allow 154.83.88.244;
 allow 158.220.123.219;
 allow 160.119.249.240;
 allow 162.210.173.17;
@@ -191,7 +194,6 @@ allow 173.237.206.68;
 allow 173.249.57.253;
 allow 173.255.198.243;
 allow 176.118.193.33;
-allow 176.121.81.51;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.97.114.202;
@@ -473,7 +475,6 @@ allow 185.227.68.78;
 allow 185.231.102.51;
 allow 185.233.100.23;
 allow 185.235.146.29;
-allow 185.238.121.3;
 allow 185.241.208.115;
 allow 185.241.208.202;
 allow 185.241.208.204;
@@ -513,7 +514,6 @@ allow 185.40.4.44;
 allow 185.40.4.64;
 allow 185.40.4.92;
 allow 185.40.4.94;
-allow 185.40.4.95;
 allow 185.42.170.203;
 allow 185.56.171.94;
 allow 185.56.83.83;
@@ -844,6 +844,7 @@ allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
+allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
 allow 23.154.177.18;
@@ -1103,14 +1104,15 @@ allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:129:2098::1;
 allow 2a04:52c0:130:896e::1;
-allow 2a04:9b87:500::3;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:122:49::1;
+allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:6589::1;
+allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6cc4::1;
 allow 2a05:d014:1527:3400:10e:d620:3542:1bc9;
 allow 2a05:d014:1527:3400:fffe:9986:ac97:faeb;
@@ -1357,10 +1359,10 @@ allow 2a0e:4005:1002:ffff:185:40:4:44;
 allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
 allow 2a0e:4005:1002:ffff:185:40:4:94;
-allow 2a0e:4005:1002:ffff:185:40:4:95;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:e701:1198::1;
+allow 2a0f:7803:fac2:ab6d::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:9400:7e11:8e09::1;
 allow 2a0f:df00:0:255::194;
@@ -1503,6 +1505,7 @@ allow 45.143.166.136;
 allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.154.98.26;
+allow 45.200.148.50;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
