Update lists at 20250127-0000

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -369,7 +369,6 @@ deny 2a09:61c0::20;
 deny 2a09:61c0::21;
 deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
-deny 2a0a:3840:8078:28:0:504e:1c2e:1337;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:4140:6c6c::2;
 deny 2a0b:f4c0:16c:10::1;
@@ -587,7 +586,6 @@ deny 2a0e:4005:1002:ffff:185:40:4:94;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:5::2;
 deny 2a0e:e701:1198::1;
-deny 2a0f:7803:fac2:ab6d::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:9400:7e11:8e09::1;
 deny 2a0f:df00:0:255::194;
@@ -612,6 +610,7 @@ deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a0f:e586:f:f:f10e:eca5:5d0e:135b;
 deny 2a0f:e586:f:f:fca1:db52:9055:cff3;
 deny 2a10:1fc0:11:0:216:3cff:fe3b:b013;
+deny 2a10:1fc0:1::c758:3168;
 deny 2a10:1fc0:8::f626:c9c6;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
