--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -127,6 +127,7 @@ deny 144.172.118.4;
 deny 144.172.118.55;
 deny 144.172.118.73;
 deny 146.103.33.218;
+deny 146.19.143.47;
 deny 146.59.126.232;
 deny 146.59.231.4;
 deny 146.70.146.26;
@@ -141,7 +142,6 @@ deny 152.53.133.14;
 deny 152.53.53.243;
 deny 154.16.116.61;
 deny 154.26.159.157;
-deny 154.83.88.244;
 deny 156.229.232.104;
 deny 156.229.232.98;
 deny 158.220.123.219;
@@ -1137,7 +1137,6 @@ deny 2a09:61c0::20;
 deny 2a09:61c0::21;
 deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
-deny 2a0a:3840:8078:28:0:504e:1c2e:1337;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:4140:6c6c::2;
 deny 2a0b:f4c0:16c:10::1;
@@ -1355,7 +1354,6 @@ deny 2a0e:4005:1002:ffff:185:40:4:94;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:5::2;
 deny 2a0e:e701:1198::1;
-deny 2a0f:7803:fac2:ab6d::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:9400:7e11:8e09::1;
 deny 2a0f:df00:0:255::194;
@@ -1380,6 +1378,7 @@ deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a0f:e586:f:f:f10e:eca5:5d0e:135b;
 deny 2a0f:e586:f:f:fca1:db52:9055:cff3;
 deny 2a10:1fc0:11:0:216:3cff:fe3b:b013;
+deny 2a10:1fc0:1::c758:3168;
 deny 2a10:1fc0:8::f626:c9c6;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
@@ -1614,7 +1613,6 @@ deny 78.142.18.219;
 deny 80.241.60.207;
 deny 80.67.167.81;
 deny 80.67.172.162;
-deny 80.78.28.46;
 deny 80.82.78.14;
 deny 80.94.92.106;
 deny 80.94.92.92;
