Update lists at 20250127-1501

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -143,7 +143,6 @@ deny 152.53.133.14;
 deny 152.53.53.243;
 deny 154.16.116.61;
 deny 154.26.159.157;
-deny 154.9.226.237;
 deny 156.229.232.104;
 deny 156.229.232.98;
 deny 158.220.123.219;
@@ -192,6 +191,7 @@ deny 173.0.3.111;
 deny 173.237.206.68;
 deny 173.249.57.253;
 deny 173.255.198.243;
+deny 173.44.141.34;
 deny 176.118.193.33;
 deny 176.121.81.51;
 deny 176.58.100.98;
@@ -687,6 +687,7 @@ deny 2001:41d0:304:200::3ea4;
 deny 2001:41d0:304:200::9dce;
 deny 2001:41d0:601:1100::6524;
 deny 2001:41d0:700:10a2::;
+deny 2001:41d0:720:e300:56::;
 deny 2001:41d0:a:2a61::1;
 deny 2001:41d0:a:5c0::1;
 deny 2001:41d0:a:fe22::1;
@@ -867,7 +868,6 @@ deny 23.154.177.5;
 deny 23.154.177.6;
 deny 23.154.177.7;
 deny 23.154.177.8;
-deny 23.154.177.9;
 deny 23.155.8.104;
 deny 23.184.48.254;
 deny 23.184.48.78;
@@ -1143,6 +1143,7 @@ deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:4140:6c6c::2;
+deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
@@ -1380,7 +1381,6 @@ deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a0f:e586:f:f:f10e:eca5:5d0e:135b;
 deny 2a0f:e586:f:f:fca1:db52:9055:cff3;
-deny 2a10:1fc0:11:0:216:3cff:fe3b:b013;
 deny 2a10:1fc0:1::c758:3168;
 deny 2a10:1fc0:8::f626:c9c6;
 deny 2a10:8a40:f313::29;
@@ -1494,7 +1494,6 @@ deny 45.141.215.88;
 deny 45.141.215.90;
 deny 45.141.215.95;
 deny 45.141.215.97;
-deny 45.143.166.136;
 deny 45.148.10.111;
 deny 45.148.10.169;
 deny 45.154.98.26;
