--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -13,6 +13,7 @@ allow 2001:41d0:304:200::3ea4;
 allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:601:1100::6524;
 allow 2001:41d0:700:10a2::;
+allow 2001:41d0:720:e300:56::;
 allow 2001:41d0:a:2a61::1;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
@@ -372,6 +373,7 @@ allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:4140:6c6c::2;
+allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -609,7 +611,6 @@ allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:f10e:eca5:5d0e:135b;
 allow 2a0f:e586:f:f:fca1:db52:9055:cff3;
-allow 2a10:1fc0:11:0:216:3cff:fe3b:b013;
 allow 2a10:1fc0:1::c758:3168;
 allow 2a10:1fc0:8::f626:c9c6;
 allow 2a10:8a40:f313::29;
