Update lists at 20250127-1800

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -283,6 +283,7 @@ allow 185.183.157.214;
 allow 185.183.159.40;
 allow 185.191.204.254;
 allow 185.193.52.180;
+allow 185.194.143.232;
 allow 185.195.71.244;
 allow 185.207.107.130;
 allow 185.207.107.216;
@@ -868,6 +869,7 @@ allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
+allow 23.154.177.9;
 allow 23.155.8.104;
 allow 23.184.48.254;
 allow 23.184.48.78;
@@ -1053,6 +1055,7 @@ allow 2a02:ed06::222;
 allow 2a03:4000:13:7c3:dead:beef:ca1f:1337;
 allow 2a03:4000:15:928:dead:beef:ca1f:1337;
 allow 2a03:4000:17:a15:d4db:fbff:fef4:8b7b;
+allow 2a03:4000:1c:4b3::443;
 allow 2a03:4000:1d:3d:1827:b1ff:feec:f6b0;
 allow 2a03:4000:1d:b7a:782f:17ff:fef0:a708;
 allow 2a03:4000:1e:7d4:84fb:5fff:fef3:9d56;
@@ -1514,6 +1517,7 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.172;
 allow 45.84.107.182;
